--- a/Макет 1/index.html
+++ b/Макет 1/index.html
@@ -11,38 +11,40 @@
 </head>
 
 <body>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item is-size-4" href="#">
-                Smoothiefeed
-            </a>
-            <a class="navbar-burger" id="burger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </a>
-        </div>
+    <div class="container">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item is-size-4" href="#">
+                    Smoothiefeed
+                </a>
+                <a class="navbar-burger" id="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
+            </div>
 
-        <div class="navbar-menu" id="nav-links">
+            <div class="navbar-menu" id="nav-links">
 
-            <div class="navbar-end">
-                <div class="navbar-item">
-                    <div class="content is-flex is-align-items-center">
-                        <a class="navbar-item is-size-5" href="#">Вход</a>
-                        <a href="#" class="navbar-item">
-                            <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="30" cy="30" r="30" fill="#C4C4C4" />
-                            </svg>
-                        </a>
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="content is-flex is-align-items-center">
+                            <a class="navbar-item is-size-5" href="#">Вход</a>
+                            <a href="#" class="navbar-item">
+                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="30" cy="30" r="30" fill="#C4C4C4" />
+                                </svg>
+                            </a>
 
 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
+    </div>
     </nav>
+    </section>
 
     <section class="section">
         <div class="container has-background-light px-5 pt-5 pb-6">
@@ -108,6 +110,15 @@
             </div>
         </div>
     </section>
+    <div class="container">
+        <div class="columns">
+            <div class="column is-3 is-offset-9">
+                <div class="content">
+                    <h3 class="studio">by Glazkov web-studio</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="./js/script.js"></script>
 </body>
