--- a/Макет 4/index.html
+++ b/Макет 4/index.html
@@ -4,56 +4,56 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title>M4</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item is-size-4" href="#">
-                Smoothiefeed
-            </a>
-            <a class="navbar-burger" id="burger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </a>
-        </div>
-
-        <div class="navbar-menu" id="nav-links">
-
-            <div class="navbar-start">
-                <a class="navbar-item is-size-5">
-                    Лента
+    <section class="section">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item is-size-4 pl-0" href="#">
+                    Smoothiefeed
                 </a>
-
-                <a class="navbar-item is-size-5">
-                    Программа детокса
+                <a class="navbar-burger" id="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </a>
             </div>
 
-            <div class="navbar-end">
-                <div class="navbar-item">
-                    <div class="content is-flex is-align-items-center">
-                        <a class="navbar-item is-size-5" href="#">1000$</a>
-                        <a class="navbar-item is-size-5" href="#">Имя Фамилия</a>
-                        <a href="#" class="navbar-item">
-                            <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="30" cy="30" r="30" fill="#C4C4C4" />
-                            </svg>
-                        </a>
+            <div class="navbar-menu" id="nav-links">
+
+                <div class="navbar-start">
+                    <a class="navbar-item is-size-5">
+                        Лента
+                    </a>
+
+                    <a class="navbar-item is-size-5">
+                        Программа детокса
+                    </a>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="content is-flex is-align-items-center">
+                            <a class="navbar-item is-size-5" href="#">1000$</a>
+                            <a class="navbar-item is-size-5" href="#">Имя Фамилия</a>
+                            <a href="#" class="navbar-item">
+                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="30" cy="30" r="30" fill="#C4C4C4" />
+                                </svg>
+                            </a>
 
 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-    </nav>
+        </nav>
+    </section>
 
     <section class="section">
         <div class="content">
@@ -277,6 +277,11 @@
         </div>
     </section>
 
+    <section class="section py-0">
+        <div class="content">
+            <h3 class="studio">by Glazkov web-studio</h3>
+        </div>
+    </section>
     <script src="./js/script.js"></script>
 </body>
 
