--- a/Макет-2/index.html
+++ b/Макет-2/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="section py-0">
+    <section class="section py-0 main">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item is-size-4" href="#">
@@ -21,20 +21,70 @@
         </nav>
     </section>
 
-    <section class="section">
+    <section class="section px-0 pb-5">
         <div class="columns">
-            <div class="column has-background-grey-light is-three-fifths is-offset-one-fifth">
+            <div class="column has-background-grey-light is-6 is-10-mobile is-offset-1-mobile is-offset-3 py-6 px-1">
                 <div class="content has-text-centered">
-                    <h4>Авторизация</h4>
-                    <h4>Продолжить с помощью</h4>
+                    <h3 class="is-size-5-mobile">Авторизация</h3>
+                    <h4 class="is-size-6-mobile">Продолжить с помощью</h4>
                 </div>
-                <div class="columns has-background-grey-lighter is-3 is-offset-one-quarter">
-                    <div class="column">1</div>
+                <div class="columns">
+                    <div
+                        class="column has-background-grey-lighter is-8 is-10-mobile is-offset-2 is-offset-1-mobile mt-5 is-flex is-align-items-center">
+                        <figure class="image is-32x32">
+                            <svg width="32" height="32" viewBox="0 0 44 44" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="44" height="44" fill="#C4C4C4" />
+                            </svg>
 
+                        </figure>
+
+                        <p class="pl-3">
+                            ВКонтакте
+                        </p>
+                    </div>
+                </div>
+                <div class="columns">
+                    <div
+                        class="column has-background-grey-lighter is-8 is-10-mobile is-offset-1-mobile is-offset-2 mt-5 is-flex is-align-items-center">
+                        <figure class="image is-32x32">
+                            <svg width="32" height="32" viewBox="0 0 44 44" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="44" height="44" fill="#C4C4C4" />
+                            </svg>
+
+                        </figure>
+
+                        <p class="pl-3">
+                            Facebook
+                        </p>
+                    </div>
+                </div>
+                <div class="columns">
+                    <div
+                        class="column has-background-grey-lighter is-8 is-10-mobile is-offset-2 is-offset-1-mobile mt-5 is-flex is-align-items-center ">
+                        <figure class="image is-32x32">
+                            <svg width="32" height="32" viewBox="0 0 44 44" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="44" height="44" fill="#C4C4C4" />
+                            </svg>
+
+                        </figure>
+
+                        <p class="pl-3">
+                            Instagram
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer class="section py-0 footer has-background-white">
+        <div class="content">
+            <p class="studio is-size-5 is-size-6-mobile">by Glazkov web-studio</p>
+        </div>
+    </footer>
 </body>
 
 </html>
