--- a/Макет 4/index.html
+++ b/Макет 4/index.html
@@ -37,18 +37,14 @@
 
                 <div class="navbar-end">
                     <div class="navbar-item">
-                        <div class="content is-flex is-align-items-center">
-                            <a class="navbar-item is-size-5" href="#">1000$</a>
-                            <a class="navbar-item is-size-5" href="#">Имя Фамилия</a>
-                            <a href="#" class="navbar-item">
-                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <circle cx="30" cy="30" r="30" fill="#C4C4C4" />
-                                </svg>
-                            </a>
-
-
-                        </div>
+                        <a class="navbar-item is-size-5 pl-0" href="#">1000$</a>
+                        <a class="navbar-item is-size-5 is-flex is-align-items-center pl-0" href="#">
+                            <div class="pr-3">Имя Фамилия</div>
+                            <svg width="50" height="50" viewBox="0 0 60 60" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="30" cy="30" r="30" fill="#C4C4C4" />
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
