--- a/Макет 1/index.html
+++ b/Макет 1/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <section class="section py-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item is-size-4" href="#">
@@ -42,8 +42,7 @@
                     </div>
                 </div>
             </div>
-    </div>
-    </nav>
+        </nav>
     </section>
 
     <section class="section">
