--- a/Макет 4/index.html
+++ b/Макет 4/index.html
@@ -13,7 +13,7 @@
     <section class="section">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item is-size-4 pl-0" href="#">
+                <a class="navbar-item is-size-4 pl-0 pb-3" href="#">
                     Smoothiefeed
                 </a>
                 <a class="navbar-burger" id="burger">
