--- a/index.html
+++ b/index.html
@@ -9,34 +9,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item is-size-4 title pb-0 mb-2" href="#">
-                smoothiefeed
-            </a>
-            <a class="navbar-burger" id="burger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </a>
-        </div>
-        
-        <div class="navbar-menu" id="nav-links">
-            <div class="navbar-start">
-                <a class="navbar-item is-size-5">
-                    лента
+    <section class="section">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item is-size-4 pl-0 pb-3" href="#">
+                    Smoothiefeed
                 </a>
-                <a class="navbar-item is-size-5">
-                    программа детокса
+                <a class="navbar-burger" id="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </a>
             </div>
-            <div class="navbar-end">
-                <div class="navbar-item">
-                    <div class="content content__navbar-text">
-                        <a class="navbar-item is-size-5" href="#">1000$</a>
-                        <a class="navbar-item is-size-5" href="#">Имя Фамилия</a>
-                        <a href="#" class="navbar-item">
-                            <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
+
+            <div class="navbar-menu" id="nav-links">
+
+                <div class="navbar-start">
+                    <a class="navbar-item is-size-5">
+                        Лента
+                    </a>
+
+                    <a class="navbar-item is-size-5">
+                        Программа детокса
+                    </a>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <a class="navbar-item is-size-5 pl-0" href="#">1000$</a>
+                        <a class="navbar-item is-size-5 is-flex is-align-items-center pl-0" href="#">
+                            <div class="pr-3">Имя Фамилия</div>
+                            <svg width="50" height="50" viewBox="0 0 60 60" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="30" cy="30" r="30" fill="#C4C4C4" />
                             </svg>
@@ -44,9 +47,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-    </nav>
+        </nav>
+    </section>
     <!-- Конец хедера -->
     <main class="mx-3">
         <h2 class="is-size-5 title pb-3">
