--- a/Макет-2/index.html
+++ b/Макет-2/index.html
@@ -80,9 +80,9 @@
         </div>
     </section>
 
-    <footer class="section py-3 footer has-background-white">
+      <footer class="section py-3 footer has-background-white">
         <div class="content">
-            <p class="studio is-size-5 is-size-6-mobile">by Glazkov web-studio</p>
+            <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
         </div>
     </footer>
 </body>
