--- a/index3.html
+++ b/index3.html
@@ -87,10 +87,10 @@
             </div>
         </div>
     </section>
-    <footer>
-        <section class="section py-0 mt-0">
-            <p class="studio is-size-5 is-pulled-right">by Glazkov web-studio </p>
-            </section>
+      <footer class="section py-3 footer has-background-white">
+        <div class="content">
+            <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
+        </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="script.js"></script>
