--- a/Макет 4/index.html
+++ b/Макет 4/index.html
@@ -273,11 +273,11 @@
         </div>
     </section>
 
-    <section class="section py-0">
+    <footer class="section py-3 footer has-background-white">
         <div class="content">
-            <h3 class="studio">by Glazkov web-studio</h3>
+            <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
         </div>
-    </section>
+    </footer>
     <script src="./js/script.js"></script>
 </body>
 
