--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
             <span class="subtitle">Instagram</span>
         </div>
 
-    <div class="has-text-right mr-5 mt-5">
-        by Glazkov web-studio 
-    </div> 
+     <footer class="section py-3 footer has-background-white">
+        <div class="content">
+            <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
+        </div>
+    </footer>
 
 
 
