--- a/Макет 1/index.html
+++ b/Макет 1/index.html
@@ -109,15 +109,11 @@
             </div>
         </div>
     </section>
-    <div class="container">
-        <div class="columns">
-            <div class="column is-3 is-offset-9">
-                <div class="content">
-                    <h3 class="studio">by Glazkov web-studio</h3>
-                </div>
-            </div>
+     <footer class="section py-3 footer has-background-white">
+        <div class="content">
+            <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
         </div>
-    </div>
+    </footer>
 
     <script src="./js/script.js"></script>
 </body>
