--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
             </div>
             <div></div>
           </section>
+     <footer class="section py-3 footer has-background-white">
+        <div class="content">
+            <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
+        </div>
+    </footer>
 </body>
 <script>
     const burgerIcon = document.querySelector('#burger')
