--- a/Макет-2/index.html
+++ b/Макет-2/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="section py-0 main">
+    <section class="section py-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item is-size-4" href="#">
@@ -21,7 +21,7 @@
         </nav>
     </section>
 
-    <section class="section px-0 pb-5">
+    <section class="section px-0 pb-5 main">
         <div class="columns">
             <div class="column has-background-grey-light is-6 is-10-mobile is-offset-1-mobile is-offset-3 py-6 px-1">
                 <div class="content has-text-centered">
