--- a/Макет 4/index.html
+++ b/Макет 4/index.html
@@ -51,15 +51,15 @@
         </nav>
     </section>
 
-    <section class="section">
+    <section class="section py-0">
         <div class="content">
-            <h1 class="title">Программы детокса</h1>
-            <h3 class="subtitle mt-5">Вы выбрали программу "Детокс Хард"</h3>
+            <h1 class="title is-size-4-mobile">Программы детокса</h1>
+            <h3 class="subtitle mt-5 is-size-5-mobile">Вы выбрали программу "Детокс Хард"</h3>
         </div>
     </section>
 
     <section class="section">
-        <div class="block is-size-4">
+        <div class="block is-size-4 is-size-5-mobile">
             Ограничиваем время
         </div>
         <div class="columns is-mobile is-variable is-8 is-flex-wrap-wrap">
@@ -131,7 +131,7 @@
     </section>
 
     <section class="section">
-        <div class="block is-size-4">
+        <div class="block is-size-4 is-size-5-mobile">
             Ограничиваем количество информации
         </div>
         <div class="columns is-mobile is-variable is-8 is-flex-wrap-wrap">
@@ -224,7 +224,7 @@
     </section>
 
     <section class="section">
-        <div class="block is-size-4">
+        <div class="block is-size-4 is-size-5-mobile">
             Комбинированные
         </div>
         <div class="columns is-mobile is-variable is-8 is-flex-wrap-wrap">
@@ -275,7 +275,7 @@
 
     <section class="section py-0">
         <div class="content">
-            <h3 class="studio">by Glazkov web-studio</h3>
+            <h3 class="studio is-size-6-mobile">by Glazkov web-studio</h3>
         </div>
     </section>
     <script src="./js/script.js"></script>
