--- a/Макет 4/index.html
+++ b/Макет 4/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="section">
+    <section class="section pt-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item is-size-4 pl-0 pb-3" href="#">
