--- a/Macbook-5/index.html
+++ b/Macbook-5/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="section">
         <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -50,14 +52,14 @@
         </nav>
     </section>
     <!-- Конец хедера -->
-    <main class="mx-3">
+    <!-- <main class="mx-3">
         <h2 class="is-size-5 title pb-3">
             Имя Фамилия
         </h2>
         <div class="subtitle columns">
-            <div class="column is-four-fifths has-background-grey-light ml-5" id="column-1">
+            <div class="column is-four-fifths has-background-grey-lighter ml-5" id="column-1">
                 <span>
-                Сейчас вы проходите программу “Детокс Хард”
+                    Сейчас вы проходите программу “Детокс Хард”
                 </span>
                 <br>
                 <br>
@@ -65,46 +67,101 @@
                     Вам доступно 3 поста каждый день и 15 баллов за каждый день соблюдения программы.
                 </span>
             </div>
-            <div class="column has-background-grey-light mr-5 pl-0" id="column-2">
+            <div class="column has-background-grey-lighter mr-5 pl-0" id="column-2">
                 Прогресс: 13 дней из 15
             </div>
         </div>
-    </main>
+    </main> -->
+
+    <section class="section pt-0">
+        <div class="content">
+            <h3>Имя Фамилия</h3>
+        </div>
+        <div class="columns has-background-grey-lighter mx-0">
+            <div class="column is-9">
+                <div class="content is-size-5">
+                    <p>
+                        Сейчас вы проходите программу “Детокс Хард”
+                    </p>
+                    <p>
+                        Вам доступно 3 поста каждый день и 15 баллов за каждый день соблюдения программы.
+                    </p>
+                </div>
+            </div>
+            <div class="column auto">
+                <div class="content">
+                    <p class="is-size-5 has-text-right-desktop has-text-centered-mobile">Прогресс: 13 дней из 15</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Конец главного -->
-    
-    <div class="px-3 pt-6">
+
+    <!-- <div class="px-3 pt-6">
         <h2 class="is-size-5 title">Профиль</h2>
         <h3 class="subtitle">Вы авторизовались через:</h3>
-        <div class="has-background-grey-light subtitle" id="programm">
+        <div class="has-background-grey-lighter subtitle" id="programm">
             <div id="facebox">
                 <img src="квадрат.svg" alt="квадрат" class="px-3 py-3">
                 <span>Facebook</span>
             </div>
-            <div class="has-background-grey" id="nameexit">
+            <div class="has-background-grey-light" id="nameexit">
                 <div id="circlename">
                     <img src="круг.svg" alt="#" class="px-4 py-2">
                     <span>Имя Фамилия</span>
                 </div>
-                <a href="../Macbook-1/index.html" class="pr-4">выйти</a>
+                <a href="../Macbook-1/index.html" class="pr-4 exit has-text-grey-dark">выйти</a>
             </div>
             <br>
         </div>
 
 
-    </div>
-        <div class="has-text-centered mt-5 mb-1">
-            Также войти с помощью:
-        </div>
-        <div class="has-background-grey-light has-text-centered vkandinst mb-5">
-            <img src="квадрат.svg" alt="квадрат" class="px-5 py-3">
-            <span class="subtitle">Вконтакте</span>
-        </div>
-        <div class="has-background-grey-light vkandinst">
-            <img src="квадрат.svg" alt="квадрат" class="px-5 py-3">
-            <span class="subtitle">Instagram</span>
-        </div>
+    </div> -->
 
-     <footer class="section py-3 footer has-background-white">
+    <section class="section">
+        <div class="content">
+            <h4 class="is-size-4">Профиль</h4>
+            <p class="is-size-5">Вы авторизовались через:</p>
+        </div>
+        <div class="columns is-centered">
+            <div class="column is-two-thirds has-background-grey-lighter">
+                <div class="block is-flex is-align-items-center">
+                    <img src="./квадрат.svg" alt="Facebook">
+                    <p class="is-size-5 pl-3">Facebook</p>
+                </div>
+                <div class="columns is-centered mb-4">
+                    <div class="column is-9 has-background-grey-light">
+                        <div class="columns">
+                            <div
+                                class="column is-8 is-flex is-align-items-center is-justify-content-center is-justify-content-flex-start-tablet">
+                                <img src="./круг.svg" alt="person">
+                                <p class="is-size-5 pl-3">Имя Фамилия</p>
+                            </div>
+                            <div
+                                class="column is-flex is-align-items-center is-justify-content-center is-justify-content-flex-end-tablet">
+                                <a href="#" class="exit is-size-5 has-text-grey-dark">выйти</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <div class="has-text-centered mt-5 mb-1">
+        Также войти с помощью:
+    </div>
+    <div class="has-background-grey-lighter has-text-centered vkandinst mb-5">
+        <img src="квадрат.svg" alt="квадрат" class="px-5 py-3">
+        <span class="subtitle">Вконтакте</span>
+    </div>
+    <div class="has-background-grey-lighter vkandinst">
+        <img src="квадрат.svg" alt="квадрат" class="px-5 py-3">
+        <span class="subtitle">Instagram</span>
+    </div>
+
+    <footer class="section py-3 footer has-background-white">
         <div class="content">
             <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
         </div>
@@ -115,4 +172,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
