--- a/Macbook-2/index.html
+++ b/Macbook-2/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="section py-0 main">
+    <section class="section py-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item is-size-4" href="../Macbook-1/index.html">
@@ -21,7 +21,7 @@
         </nav>
     </section>
 
-    <section class="section px-0 pb-5">
+    <section class="section px-0 pb-5 main">
         <div class="columns">
             <div class="column has-background-grey-light is-6 is-10-mobile is-offset-1-mobile is-offset-3 py-6 px-1">
                 <div class="content has-text-centered">
@@ -56,7 +56,7 @@
                         </figure>
 
                         <p class="pl-3">
-                            <a href="../Macbook-3/index3.html">
+                            <a href="../Macbook-3/index3.html" class="has-text-grey-dark">
                                 Facebook
                             </a>
                         </p>
@@ -82,7 +82,7 @@
         </div>
     </section>
 
-      <footer class="section py-3 footer has-background-white">
+    <footer class="section py-3 footer has-background-white">
         <div class="content">
             <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
         </div>
