--- a/Macbook-4/index.html
+++ b/Macbook-4/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <section class="section pt-0">
+    <section class="section py-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item is-size-4 pl-0 pb-3" href="#">
+                <a class="navbar-item is-size-4 pl-0 pb-3" href="../Macbook-1/index.html">
                     Smoothiefeed
                 </a>
                 <a class="navbar-burger" id="burger">
@@ -26,7 +26,7 @@
             <div class="navbar-menu" id="nav-links">
 
                 <div class="navbar-start">
-                    <a class="navbar-item is-size-5">
+                    <a href="../Macbook-3/index3.html" class="navbar-item is-size-5">
                         Лента
                     </a>
 
@@ -38,7 +38,8 @@
                 <div class="navbar-end">
                     <div class="navbar-item">
                         <a class="navbar-item is-size-5 pl-0" href="#">1000$</a>
-                        <a class="navbar-item is-size-5 is-flex is-align-items-center pl-0" href="#">
+                        <a href="../Macbook-5/index.html"
+                            class="navbar-item is-size-5 is-flex is-align-items-center pl-0" href="#">
                             <div class="pr-3">Имя Фамилия</div>
                             <svg width="50" height="50" viewBox="0 0 60 60" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -51,15 +52,15 @@
         </nav>
     </section>
 
-    <section class="section py-0">
+    <section class="section">
         <div class="content">
-            <h1 class="title is-size-4-mobile">Программы детокса</h1>
-            <h3 class="subtitle mt-5 is-size-5-mobile">Вы выбрали программу "Детокс Хард"</h3>
+            <h1 class="title">Программы детокса</h1>
+            <h3 class="subtitle mt-5">Вы выбрали программу "Детокс Хард"</h3>
         </div>
     </section>
 
     <section class="section">
-        <div class="block is-size-4 is-size-5-mobile">
+        <div class="block is-size-4">
             Ограничиваем время
         </div>
         <div class="columns is-mobile is-variable is-8 is-flex-wrap-wrap">
@@ -131,7 +132,7 @@
     </section>
 
     <section class="section">
-        <div class="block is-size-4 is-size-5-mobile">
+        <div class="block is-size-4">
             Ограничиваем количество информации
         </div>
         <div class="columns is-mobile is-variable is-8 is-flex-wrap-wrap">
@@ -224,7 +225,7 @@
     </section>
 
     <section class="section">
-        <div class="block is-size-4 is-size-5-mobile">
+        <div class="block is-size-4">
             Комбинированные
         </div>
         <div class="columns is-mobile is-variable is-8 is-flex-wrap-wrap">
