--- a/Macbook-5/index.html
+++ b/Macbook-5/index.html
@@ -14,7 +14,7 @@
     <section class="section pt-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a href="../Macbook-1/index.html" class="navbar-item is-size-4 pl-0 pb-3">
+                <a href="../Macbook-1/index.html" class="navbar-item is-size-4 pl-0 pb-3 is-size-5-mobile">
                     Smoothiefeed
                 </a>
                 <a class="navbar-burger" id="burger">
@@ -75,11 +75,11 @@
 
     <section class="section pt-0">
         <div class="content">
-            <h3>Имя Фамилия</h3>
+            <h3 class="is-size-5-mobile">Имя Фамилия</h3>
         </div>
         <div class="columns has-background-grey-lighter mx-0">
             <div class="column is-9">
-                <div class="content is-size-5">
+                <div class="content is-size-5 is-size-6-mobile">
                     <p>
                         Сейчас вы проходите программу “Детокс Хард”
                     </p>
@@ -88,9 +88,10 @@
                     </p>
                 </div>
             </div>
-            <div class="column auto">
+            <div class="column">
                 <div class="content">
-                    <p class="is-size-5 has-text-right-desktop has-text-centered-mobile">Прогресс: 13 дней из 15</p>
+                    <p class="is-size-5 is-size-6-mobile has-text-right-desktop has-text-centered-mobile">Прогресс: 13
+                        дней из 15</p>
                 </div>
             </div>
         </div>
@@ -120,26 +121,28 @@
 
     <section class="section">
         <div class="content">
-            <h4 class="is-size-4">Профиль</h4>
-            <p class="is-size-5">Вы авторизовались через:</p>
+            <h4 class="is-size-4 is-size-5-mobile">Профиль</h4>
+            <p class="is-size-5 is-size-6-mobile">Вы авторизовались через:</p>
         </div>
         <div class="columns is-centered">
             <div class="column is-two-thirds has-background-grey-lighter">
                 <div class="block is-flex is-align-items-center">
                     <img src="./квадрат.svg" alt="Facebook">
-                    <p class="is-size-5 pl-3">Facebook</p>
+                    <p class="is-size-5 pl-3 is-size-6-mobile">Facebook</p>
                 </div>
-                <div class="columns is-centered mb-4">
+                <div class="columns is-centered mb-3 mx-1">
                     <div class="column is-9 has-background-grey-light">
                         <div class="columns">
                             <div
                                 class="column is-8 is-flex is-align-items-center is-justify-content-center is-justify-content-flex-start-tablet">
                                 <img src="./круг.svg" alt="person">
-                                <p class="is-size-5 pl-3">Имя Фамилия</p>
+                                <p class="is-size-5 pl-3 is-size-6-mobile">Имя Фамилия</p>
                             </div>
                             <div
                                 class="column is-flex is-align-items-center is-justify-content-center is-justify-content-flex-end-tablet">
-                                <a href="#" class="exit is-size-5 has-text-grey-dark">выйти</a>
+                                <div class="content">
+                                    <a href="#" class="exit is-size-5 is-size-6-mobile has-text-grey-dark">выйти</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -149,17 +152,23 @@
         </div>
     </section>
 
-    <div class="has-text-centered mt-5 mb-1">
-        Также войти с помощью:
-    </div>
-    <div class="has-background-grey-lighter has-text-centered vkandinst mb-5">
-        <img src="квадрат.svg" alt="квадрат" class="px-5 py-3">
-        <span class="subtitle">Вконтакте</span>
-    </div>
-    <div class="has-background-grey-lighter vkandinst">
-        <img src="квадрат.svg" alt="квадрат" class="px-5 py-3">
-        <span class="subtitle">Instagram</span>
-    </div>
+    <section class="section">
+        <div class="has-text-centered mt-5 mb-1">
+            <div class="content is-size-5">
+                <p>
+                    Также войти с помощью:
+                </p>
+            </div>
+        </div>
+        <div class="has-background-grey-lighter has-text-centered vkandinst mb-5">
+            <img src="квадрат.svg" alt="квадрат" class="px-3 py-3">
+            <p class="subtitle is-size-6-mobile">Вконтакте</p>
+        </div>
+        <div class="has-background-grey-lighter vkandinst">
+            <img src="квадрат.svg" alt="квадрат" class="px-3 py-3">
+            <p class="subtitle is-size-6-mobile">Instagram</p>
+        </div>
+    </section>
 
     <footer class="section py-3 footer has-background-white">
         <div class="content">
