--- a/Macbook-6/index.html
+++ b/Macbook-6/index.html
@@ -113,7 +113,9 @@
       <div class="column is-narrow">
         <div class="buttons">
           <a class="button is-light is-medium">
-            <img class="icons" src='./heart.png' alt='like'>
+            <figure class="image">
+              <img class="icons" src='./heart.png' alt='like'>
+            </figure>
             <p class="pl-1 is-size-6-mobile">1400</p>
 
           </a>
@@ -122,7 +124,9 @@
       <div class="column is-narrow">
         <div class="buttons">
           <a class="button is-light is-medium">
-            <img class="icons" src='./comment.png' alt='comments'>
+            <figure class="image">
+              <img class="icons" src='./comment.png' alt='comments'>
+            </figure>
             <p class="pl-1 is-size-6-mobile">1400</p>
 
           </a>
@@ -162,7 +166,9 @@
       <div class="column is-narrow">
         <div class="buttons">
           <a class="button is-light is-medium">
-            <img class="icons" src='./heart.png' alt='like'>
+            <figure class="image">
+              <img class="icons" src='./heart.png' alt='like'>
+            </figure>
             <p class="pl-1 is-size-6-mobile">1400</p>
 
           </a>
@@ -171,7 +177,9 @@
       <div class="column is-narrow">
         <div class="buttons">
           <a class="button is-light is-medium">
-            <img class="icons" src='./comment.png' alt='comments'>
+            <figure class="image">
+              <img class="icons" src='./comment.png' alt='comments'>
+            </figure>
             <p class="pl-1 is-size-6-mobile">1400</p>
 
           </a>
@@ -180,6 +188,12 @@
     </div>
     <div></div>
   </section>
+
+  <footer class="section py-3 footer has-background-white">
+    <div class="content">
+      <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
+    </div>
+  </footer>
 </body>
 <script>
   const burgerIcon = document.querySelector('#burger')
