--- a/index3.html
+++ b/index3.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="ru" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
 </head>
 <body class="m-0 p-0 is-size-5">
-    <section class="section py-0 mt-0" >
+    <header></header>
+    <section class="section py-0 mt-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item is-size-4  pl-0 pb-3" href="#">
+                <a class="navbar-item is-size-4  pl-0 pb-3" href="../Macbook-1/index.html">
                     Smoothiefeed
                 </a>
                 <a class="navbar-burger" id="burger">
@@ -24,11 +25,11 @@
             <div class="navbar-menu" id="nav-links">
 
                 <div class="navbar-start">
-                    <a class="navbar-item is-size-5">
+                    <a href="../Macbook-3/index3.html" class="navbar-item is-size-5">
                         Лента
                     </a>
 
-                    <a class="navbar-item is-size-5">
+                    <a href="../Macbook-4/index.html" class="navbar-item is-size-5">
                         Программа детокса
                     </a>
                 </div>
@@ -36,7 +37,7 @@
                 <div class="navbar-end">
                     <div class="navbar-item ">
                         <a class="navbar-item is-size-5 pl-0" href="#">1000$</a>
-                        <a class="navbar-item is-size-5 is-flex is-align-items-center pl-0" href="#">
+                        <a class="navbar-item is-size-5 is-flex is-align-items-center pl-0" href="../Macbook-5/index.html">
                             <div class="pr-3">Имя Фамилия</div>
                             <svg width="50" height="50" viewBox="0 0 60 60" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -60,33 +61,35 @@
             <div class="main_container_button mb-6 ">
                 <div class="columns ">
                     <div class="column is-6 is-offset-3">
-                        <a href="#" class="button is-dark is-medium is-size-4 py-4 " >Перейти к просмотру ленты</a>
+                        <a href="#" class="button is-dark is-medium is-size-4 py-4 ">Перейти к просмотру ленты</a>
                     </div>
                 </div>
-                <div class="columns ">
-                    <div class="column  is-3  is-offset-3">
-                        <button class="button  is-dark is-medium is-size-5 py-4 ">
+                <div class="columns is-flex flex-column">
+                    <div class="column  is-3  is-offset-3-desktop">
+                        <a href="../Macbook-6/index.html" class="button  is-dark is-medium is-size-5 py-4" >
                             <div class="button_text is-inline-flex is-justify-content-space-between is-align-items-center">
                                 <p>+1 пост</p>
                                 <p>10$</p>
                             </div>
-                        </button>
+                        </a>
                     </div>
                     <div class="column  is-3 ml-1 ">
-                        <button class="button is-dark is-medium is-size-5 py-4 ">
+                        <a href="../Macbook-6/index.html" class="button is-dark is-medium is-size-5 py-4 ">
                             <div class="button_text is-inline-flex is-justify-content-space-between is-align-items-center">
                                 <p>+1 пост</p>
-                                <div class="text1 has-text-right is-size-6 ">
-                                    <p>за просмотр</p><p>рекламы</p>
+                                <div class="text1 has-text-right is-size-6 pl-2">
+                                    <p>за просмотр</p>
+                                    <p>рекламы</p>
                                 </div>
                             </div>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-      <footer class="section py-3 footer has-background-white">
+   
+    <footer class="section py-3 footer has-background-white">
         <div class="content">
             <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
         </div>
