--- a/Macbook-2/index.html
+++ b/Macbook-2/index.html
@@ -82,7 +82,7 @@
         </div>
     </section>
 
-    <footer class="section py-3 footer has-background-white">
+    <footer class="footer py-3 footer has-background-white">
         <div class="content">
             <p class="studio is-size-5 is-size-6-mobile is-pulled-right">by Glazkov web-studio</p>
         </div>
