--- a/Macbook-1/index.html
+++ b/Macbook-1/index.html
@@ -14,7 +14,7 @@
     <section class="section py-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item is-size-4" href="../Macbook-1/index.html">
+                <a class="navbar-item is-size-4 is-size-5-mobile" href="../Macbook-1/index.html">
                     Smoothiefeed
                 </a>
                 <a class="navbar-burger" id="burger">
@@ -50,8 +50,9 @@
             <div class="columns">
                 <div class="column">
                     <div class="content is-half">
-                        <h1 class="title">Что такое Smoothiefeed</h1>
-                        <p>Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod risus in porttitor
+                        <h1 class="title is-size-4-mobile">Что такое Smoothiefeed</h1>
+                        <p class="is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                            euismod risus in porttitor
                             varius.
                             Maecenas
                             gravida erat facilisis, mattis eros ac, gravida augue. Proin lacinia mauris sit amet urna
@@ -77,8 +78,9 @@
 
                 <div class="column">
                     <div class="content is-half">
-                        <h1 class="title">Цифровой детокс</h1>
-                        <p>Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod risus in porttitor
+                        <h1 class="title is-size-4-mobile">Цифровой детокс</h1>
+                        <p class="is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                            euismod risus in porttitor
                             varius.
                             Maecenas
                             gravida erat facilisis, mattis eros ac, gravida augue. Proin lacinia mauris sit amet urna
@@ -100,7 +102,9 @@
             <div class="column is-6">
                 <div class="container has-background-light">
                     <div class="content is-flex is-align-items-center is-flex-direction-column py-6 px-3">
-                        <h2 class="title is-flex is-flex-direction-column py-5">Начните заботиться о себе сейчас
+                        <h2 class="title is-flex is-flex-direction-column py-5 has-text-centered is-size-4-mobile">
+                            Начните заботиться о
+                            себе сейчас
                             <a class="button mt-5" href="../Macbook-2/index.html">войти</a>
                         </h2>
 
