--- a/Macbook-2/index.html
+++ b/Macbook-2/index.html
@@ -14,7 +14,7 @@
     <section class="section py-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item is-size-4" href="../Macbook-1/index.html">
+                <a class="navbar-item is-size-4 is-size-5-mobile" href="../Macbook-1/index.html">
                     Smoothiefeed
                 </a>
             </div>
