--- a/Macbook-4/index.html
+++ b/Macbook-4/index.html
@@ -13,7 +13,7 @@
     <section class="section py-0">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item is-size-4 pl-0 pb-3" href="../Macbook-1/index.html">
+                <a class="navbar-item is-size-4 pl-0 pb-3 is-size-5-mobile" href="../Macbook-1/index.html">
                     Smoothiefeed
                 </a>
                 <a class="navbar-burger" id="burger">
@@ -54,19 +54,19 @@
 
     <section class="section">
         <div class="content">
-            <h1 class="title">Программы детокса</h1>
-            <h3 class="subtitle mt-5">Вы выбрали программу "Детокс Хард"</h3>
+            <h1 class="title is-size-4-mobile">Программы детокса</h1>
+            <h3 class="subtitle mt-5 is-size-5-mobile">Вы выбрали программу "Детокс Хард"</h3>
         </div>
     </section>
 
-    <section class="section">
-        <div class="block is-size-4">
+    <section class="section pt-0">
+        <div class="block is-size-4 is-size-5-mobile">
             Ограничиваем время
         </div>
         <div class="columns is-mobile is-variable is-8 is-flex-wrap-wrap">
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
@@ -87,7 +87,7 @@
             </div>
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
@@ -108,7 +108,7 @@
             </div>
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
@@ -139,7 +139,7 @@
 
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
@@ -160,7 +160,7 @@
             </div>
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
@@ -181,7 +181,7 @@
             </div>
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
@@ -202,7 +202,7 @@
             </div>
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
@@ -231,7 +231,7 @@
         <div class="columns is-mobile is-variable is-8 is-flex-wrap-wrap">
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
@@ -252,7 +252,7 @@
             </div>
             <div class="column has-background-info is-one-fifth-desktop is-5-tablet is-two-fifths-mobile mx-5">
                 <div class="content has-text-light">
-                    <h2 class="is-size-4-mobile has-text-light">Название</h2>
+                    <h2 class="is-size-5-mobile has-text-light">Название</h2>
                     <p class="is-size-5 is-size-6-mobile">Orem ipsum dolor sit amet, consectetur adipiscing elit. Donec
                         euismod risus in
                         porttitor varius.
