--- a/Macbook-6/index.html
+++ b/Macbook-6/index.html
@@ -102,7 +102,7 @@
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
         laborum."
       </p>
-      <button class='button is-text is-medium is-size-6-mobile'>читать дальше...</button>
+      <button class="button is-text is-medium is-size-6-mobile">читать дальше...</button>
     </div>
     <div class="columns is-mobile">
       <div class="column is-narrow is-10 is-offset-1">
